{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 209,
  "lineage": "c1c7d3aa-7345-5c60-40ca-fc87cf059d24",
  "resources": [
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4bab9adfcf464b1",
            "arn": "arn:aws:ec2:us-east-2:730071141898:instance/i-07f0e5306e70106e7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ex-complete-bastion-c8df-ssm-profile",
            "id": "i-07f0e5306e70106e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f5c2411b4347e67a",
            "private_dns": "ip-10-200-35-78.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.200.35.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:730071141898:key/a5fa4221-ad13-4e43-9a8e-cd494df72cf2",
                "throughput": 125,
                "volume_id": "vol-0609c36d5c2c03e47",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b82103b7f59cf49",
            "tags": {
              "Environment": "dev",
              "Function": "bastion-ssm",
              "GithubRepo": "github.com/defenseunicorns/delivery-aws-iac",
              "Name": "ex-complete-bastion-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "Function": "bastion-ssm",
              "GithubRepo": "github.com/defenseunicorns/delivery-aws-iac",
              "Name": "ex-complete-bastion-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049e1ff91c529e86f"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazonlinux2",
            "module.bastion.aws_iam_instance_profile.bastion_ssm_profile",
            "module.bastion.aws_iam_role.bastion_ssm_role",
            "module.bastion.aws_security_group.sg",
            "module.bastion.data.aws_ami.from_filter",
            "module.bastion.data.aws_subnet.subnet_by_name",
            "module.bastion.data.cloudinit_config.config",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:security-group/sg-049e1ff91c529e86f",
            "description": "SG for ex-complete-bastion-c8df",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049e1ff91c529e86f",
            "ingress": [],
            "name": "ex-complete-bastion-c8df-sg",
            "name_prefix": "",
            "owner_id": "730071141898",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:security-group/sg-0bfc6d8e74520459b",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0bfc6d8e74520459b",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:security-group/sg-09112ca123695f26c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-09112ca123695f26c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.200.0.0/16",
                  "100.64.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ex-complete-c8df-vpc_tls",
            "name_prefix": "",
            "owner_id": "730071141898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:network-acl/acl-0b7425f771ce59c0a",
            "default_network_acl_id": "acl-0b7425f771ce59c0a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b7425f771ce59c0a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "730071141898",
            "subnet_ids": null,
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:route-table/rtb-05053c378c20206ba",
            "default_route_table_id": "rtb-05053c378c20206ba",
            "id": "rtb-05053c378c20206ba",
            "owner_id": "730071141898",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:security-group/sg-0bfc6d8e74520459b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bfc6d8e74520459b",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "730071141898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-default",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e55f283095b666e",
            "domain": "vpc",
            "id": "eipalloc-00e55f283095b666e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-18-181-90.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.181.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:internet-gateway/igw-0095d0819fca87c8f",
            "id": "igw-0095d0819fca87c8f",
            "owner_id": "730071141898",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e55f283095b666e",
            "association_id": "eipassoc-0be9a0b95a1170d2a",
            "connectivity_type": "public",
            "id": "nat-0cb65816ade33b9af",
            "network_interface_id": "eni-0e3c772a5e98a94d0",
            "private_ip": "10.200.6.142",
            "public_ip": "3.18.181.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-047097c3c8bb34447",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e523f6fb9d0aa271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cb65816ade33b9af",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0095d0819fca87c8f",
            "id": "r-rtb-04508d788e2af2e651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04508d788e2af2e65",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:route-table/rtb-0a932e0839d21da11",
            "id": "rtb-0a932e0839d21da11",
            "owner_id": "730071141898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:route-table/rtb-08e523f6fb9d0aa27",
            "id": "rtb-08e523f6fb9d0aa27",
            "owner_id": "730071141898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:route-table/rtb-04508d788e2af2e65",
            "id": "rtb-04508d788e2af2e65",
            "owner_id": "730071141898",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03afb2783beb8839c",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-0756df06f971104ea"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2312040cdfb6d1f",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-0407c18bb612a9eb0"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc9d619814f9294f",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-053b9559e7b8bd112"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc61fde88abea41",
            "route_table_id": "rtb-0a932e0839d21da11",
            "subnet_id": "subnet-070e4cca8febd117b"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090bbf91af00e2773",
            "route_table_id": "rtb-0a932e0839d21da11",
            "subnet_id": "subnet-0393b7d70a29c4ff4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e69bde4a5234b6",
            "route_table_id": "rtb-0a932e0839d21da11",
            "subnet_id": "subnet-07ab456756d8107de"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036fd73350eee4dc7",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-02b82103b7f59cf49"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0646c9809ad5afb3a",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-017421dc4e20034f4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e6d72ec482bb026",
            "route_table_id": "rtb-08e523f6fb9d0aa27",
            "subnet_id": "subnet-05907faca564b2249"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08979862a5daafe03",
            "route_table_id": "rtb-04508d788e2af2e65",
            "subnet_id": "subnet-047097c3c8bb34447"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ca103a39b5fdf3",
            "route_table_id": "rtb-04508d788e2af2e65",
            "subnet_id": "subnet-0191d5faf245d01fd"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d469093205b3f32",
            "route_table_id": "rtb-04508d788e2af2e65",
            "subnet_id": "subnet-0423c083abec5514f"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-0756df06f971104ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.64.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0756df06f971104ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-0407c18bb612a9eb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.200.72.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0407c18bb612a9eb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-053b9559e7b8bd112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.200.80.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053b9559e7b8bd112",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-db-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-070e4cca8febd117b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "100.64.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070e4cca8febd117b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-0393b7d70a29c4ff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "100.64.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0393b7d70a29c4ff4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-07ab456756d8107de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "100.64.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ab456756d8107de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-intra-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-02b82103b7f59cf49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.32.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b82103b7f59cf49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-017421dc4e20034f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.200.40.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017421dc4e20034f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-05907faca564b2249",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.200.48.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05907faca564b2249",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-private-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap",
              "kubernetes.io/cluster/ex-complete-c8df": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-047097c3c8bb34447",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.200.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047097c3c8bb34447",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2a",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-0191d5faf245d01fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.200.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0191d5faf245d01fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2b",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:subnet/subnet-0423c083abec5514f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.200.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0423c083abec5514f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730071141898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df-public-us-east-2c",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc/vpc-04a04f7600ace7f1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0b7425f771ce59c0a",
            "default_route_table_id": "rtb-05053c378c20206ba",
            "default_security_group_id": "sg-0bfc6d8e74520459b",
            "dhcp_options_id": "dopt-09f6db21430bf9cdc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a04f7600ace7f1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05053c378c20206ba",
            "owner_id": "730071141898",
            "tags": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "ex-complete-c8df",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            }
          },
          "dependencies": [
            "random_id.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "autoscaling",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-022d03d08bc7e616d",
            "dns_entry": [
              {
                "dns_name": "vpce-022d03d08bc7e616d-7ec45dr5.autoscaling.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022d03d08bc7e616d-7ec45dr5-us-east-2c.autoscaling.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022d03d08bc7e616d-7ec45dr5-us-east-2a.autoscaling.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022d03d08bc7e616d-7ec45dr5-us-east-2b.autoscaling.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "autoscaling.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z00322771JJUKP3WJZA40"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-022d03d08bc7e616d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-091e0693d99d30b24",
              "eni-0a93328d8d16c1e1c",
              "eni-0da51c0da95fe77eb"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.autoscaling",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "dynamodb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0003d4224d2ec50f5",
            "cidr_blocks": [
              "35.71.102.128/26",
              "35.71.102.0/25",
              "52.94.4.0/24"
            ],
            "id": "vpce-0003d4224d2ec50f5",
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-4ca54025",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04508d788e2af2e65",
              "rtb-08e523f6fb9d0aa27",
              "rtb-0a932e0839d21da11"
            ],
            "service_name": "com.amazonaws.us-east-2.dynamodb",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "dynamodb-vpc-endpoint",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "dynamodb-vpc-endpoint",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0ea78c8ba52e811b6",
            "dns_entry": [
              {
                "dns_name": "vpce-0ea78c8ba52e811b6-5ua8epbp.ec2.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ea78c8ba52e811b6-5ua8epbp-us-east-2c.ec2.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ea78c8ba52e811b6-5ua8epbp-us-east-2b.ec2.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ea78c8ba52e811b6-5ua8epbp-us-east-2a.ec2.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z035930925TNP6EGRK9J7"
              },
              {
                "dns_name": "ec2.us-east-2.api.aws",
                "hosted_zone_id": "Z035929619KIEWURB4BNB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ea78c8ba52e811b6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00303c8f38b68d29b",
              "eni-01f6b2b00eb750565",
              "eni-07701322e536faefb"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-072fe1cc5f1184bef",
            "dns_entry": [
              {
                "dns_name": "vpce-072fe1cc5f1184bef-a9fbviod.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-072fe1cc5f1184bef-a9fbviod-us-east-2c.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-072fe1cc5f1184bef-a9fbviod-us-east-2a.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-072fe1cc5f1184bef-a9fbviod-us-east-2b.ec2messages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ec2messages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09426602AWQMO1DONIHD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-072fe1cc5f1184bef",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0317af68d0d4dc37b",
              "eni-0687f6391d394f98e",
              "eni-07c009261504c349c"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-067a260ef03c8fd54",
            "dns_entry": [
              {
                "dns_name": "vpce-067a260ef03c8fd54-b39ak7lm.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-067a260ef03c8fd54-b39ak7lm-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-067a260ef03c8fd54-b39ak7lm-us-east-2c.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-067a260ef03c8fd54-b39ak7lm-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z03603951E7JQ8E2LJK11"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-067a260ef03c8fd54",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04502adb9050f2510",
              "eni-0cf03a6f25349d08d",
              "eni-0ea81ee45395259ac"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":[\"ecr:UploadLayerPart\",\"ecr:PutImage\",\"ecr:ListImages\",\"ecr:InitiateLayerUpload\",\"ecr:GetDownloadUrlForLayer\",\"ecr:GetAuthorizationToken\",\"ecr:DescribeImages\",\"ecr:CreateRepository\",\"ecr:CompleteLayerUpload\",\"ecr:BatchGetImage\",\"ecr:BatchCheckLayerAvailability\"],\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"*\"},\"Resource\":\"*\"},{\"Action\":\"*\",\"Condition\":{\"StringNotEquals\":{\"aws:SourceVpc\":\"vpc-04a04f7600ace7f [...]
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0758d6f340bbd9528",
            "dns_entry": [
              {
                "dns_name": "vpce-0758d6f340bbd9528-fxiv21h0.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0758d6f340bbd9528-fxiv21h0-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0758d6f340bbd9528-fxiv21h0-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0758d6f340bbd9528-fxiv21h0-us-east-2c.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0942207KDP93JJAT3OH"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z0942207KDP93JJAT3OH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0758d6f340bbd9528",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01926cf3c113371b8",
              "eni-088f49189fa729b70",
              "eni-09c36342692d3e4b2"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":[\"ecr:UploadLayerPart\",\"ecr:PutImage\",\"ecr:ListImages\",\"ecr:InitiateLayerUpload\",\"ecr:GetDownloadUrlForLayer\",\"ecr:GetAuthorizationToken\",\"ecr:DescribeImages\",\"ecr:CreateRepository\",\"ecr:CompleteLayerUpload\",\"ecr:BatchGetImage\",\"ecr:BatchCheckLayerAvailability\"],\"Effect\":\"Allow\",\"Principal\":{\"AWS\":\"*\"},\"Resource\":\"*\"},{\"Action\":\"*\",\"Condition\":{\"StringNotEquals\":{\"aws:SourceVpc\":\"vpc-04a04f7600ace7f [...]
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "efs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-079921e597cdcb48c",
            "dns_entry": [
              {
                "dns_name": "vpce-079921e597cdcb48c-lbmduqwn.elasticfilesystem.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-079921e597cdcb48c-lbmduqwn-us-east-2c.elasticfilesystem.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-079921e597cdcb48c-lbmduqwn-us-east-2b.elasticfilesystem.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-079921e597cdcb48c-lbmduqwn-us-east-2a.elasticfilesystem.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "elasticfilesystem.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09444861XU9032TPYGY5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-079921e597cdcb48c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-025aa238be2e9ce69",
              "eni-04d0fa832e490017d",
              "eni-0bade0e520479c110"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.elasticfilesystem",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "elasticloadbalancing",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0158402bd5d91a1d4",
            "dns_entry": [
              {
                "dns_name": "vpce-0158402bd5d91a1d4-c0e548sp.elasticloadbalancing.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0158402bd5d91a1d4-c0e548sp-us-east-2a.elasticloadbalancing.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0158402bd5d91a1d4-c0e548sp-us-east-2b.elasticloadbalancing.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0158402bd5d91a1d4-c0e548sp-us-east-2c.elasticloadbalancing.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "elasticloadbalancing.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z03595451VQSEDA5YAUCK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0158402bd5d91a1d4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0753df3c580a97974",
              "eni-08f7b983356592a4e",
              "eni-0cdc303b62faaaec2"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.elasticloadbalancing",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0ecb60c7df9ba08a2",
            "dns_entry": [
              {
                "dns_name": "vpce-0ecb60c7df9ba08a2-x9b644or.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ecb60c7df9ba08a2-x9b644or-us-east-2a.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ecb60c7df9ba08a2-x9b644or-us-east-2b.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0ecb60c7df9ba08a2-x9b644or-us-east-2c.kms.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "kms.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z042223222X34FEHMGOM9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ecb60c7df9ba08a2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-021a12778d625dd1e",
              "eni-0510d092e2526a177",
              "eni-0ae3fe6316f2697d9"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "lambda",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0af50d6451b4fe180",
            "dns_entry": [
              {
                "dns_name": "vpce-0af50d6451b4fe180-7meaai40.lambda.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0af50d6451b4fe180-7meaai40-us-east-2b.lambda.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0af50d6451b4fe180-7meaai40-us-east-2a.lambda.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0af50d6451b4fe180-7meaai40-us-east-2c.lambda.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "lambda.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z03599151SGY7YVB9BDMK"
              },
              {
                "dns_name": "lambda.us-east-2.api.aws",
                "hosted_zone_id": "Z04235041WP6RRAH3SBSC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0af50d6451b4fe180",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-027f5216980a00a67",
              "eni-028a07798dd21fd26",
              "eni-06c4a130f64671383"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.lambda",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0fb5f9b4b50af93cc",
            "dns_entry": [
              {
                "dns_name": "vpce-0fb5f9b4b50af93cc-nvq1wji3.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0fb5f9b4b50af93cc-nvq1wji3-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0fb5f9b4b50af93cc-nvq1wji3-us-east-2c.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0fb5f9b4b50af93cc-nvq1wji3-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z094375864H4Q8SFS05I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fb5f9b4b50af93cc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a98d001a74b45dbb",
              "eni-0c1c0dca1f6976400",
              "eni-0e2bdd91c4ce43ca4"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0462030a152389d80",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-0462030a152389d80",
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04508d788e2af2e65",
              "rtb-08e523f6fb9d0aa27",
              "rtb-0a932e0839d21da11"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "s3-vpc-endpoint",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Name": "s3-vpc-endpoint",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-075785851fa3e35b5",
            "dns_entry": [
              {
                "dns_name": "vpce-075785851fa3e35b5-fi68usc8.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-075785851fa3e35b5-fi68usc8-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-075785851fa3e35b5-fi68usc8-us-east-2c.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-075785851fa3e35b5-fi68usc8-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09423671O1RF1KCY258Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075785851fa3e35b5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00e90212501570110",
              "eni-054cf90854206a34e",
              "eni-0732606d23ea485ac"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-01b87b9d75c02c869",
            "dns_entry": [
              {
                "dns_name": "vpce-01b87b9d75c02c869-mmshyoig.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01b87b9d75c02c869-mmshyoig-us-east-2c.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01b87b9d75c02c869-mmshyoig-us-east-2b.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01b87b9d75c02c869-mmshyoig-us-east-2a.ssm.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssm.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04247682Y9EF9SVWZEBH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01b87b9d75c02c869",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-041e30e77ccfb1380",
              "eni-090310687f7f06d44",
              "eni-0dd5928902f71b7fe"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-0e84ebe8b9cf584c3",
            "dns_entry": [
              {
                "dns_name": "vpce-0e84ebe8b9cf584c3-8yv4kjx6.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e84ebe8b9cf584c3-8yv4kjx6-us-east-2a.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e84ebe8b9cf584c3-8yv4kjx6-us-east-2b.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0e84ebe8b9cf584c3-8yv4kjx6-us-east-2c.ssmmessages.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "ssmmessages.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z002558620MBVACL434ZY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e84ebe8b9cf584c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0332b7abd4dbb9a65",
              "eni-07cfb48ef1d018817",
              "eni-0d5ae7ad5850fa7e2"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730071141898:vpc-endpoint/vpce-022b25285ea3b24e2",
            "dns_entry": [
              {
                "dns_name": "vpce-022b25285ea3b24e2-1737h45g.sts.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022b25285ea3b24e2-1737h45g-us-east-2c.sts.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022b25285ea3b24e2-1737h45g-us-east-2b.sts.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-022b25285ea3b24e2-1737h45g-us-east-2a.sts.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "sts.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04224153LUN307K9ZS2J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-022b25285ea3b24e2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0261705b88d4e1edd",
              "eni-0a83f36b29b733cae",
              "eni-0cf0ac5fa145b9a1b"
            ],
            "owner_id": "730071141898",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09112ca123695f26c",
              "sg-0bfc6d8e74520459b"
            ],
            "service_name": "com.amazonaws.us-east-2.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-017421dc4e20034f4",
              "subnet-02b82103b7f59cf49",
              "subnet-05907faca564b2249"
            ],
            "tags": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "tags_all": {
              "Endpoint": "true",
              "Environment": "dev",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-vpc",
              "Project": "du-iac-cicd",
              "RootTFModule": "bootstrap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04a04f7600ace7f1e"
          },
          "dependencies": [
            "module.vpc.aws_security_group.vpc_tls",
            "module.vpc.data.aws_iam_policy_document.ecr",
            "module.vpc.data.aws_security_group.default",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this",
            "random_id.default"
          ]
        }
      ]
    }
  ]
}